--- a/_config.yml
+++ b/_config.yml
@@ -1,24 +1,9 @@
 
-# --- Core site settings ---
 title: "Learn & Apply"
-description: "Notes, patterns, and experiments — published with GitHub Pages (Cayman theme)"
+description: "Notes, patterns, and experiments — Cayman"
 theme: jekyll-theme-cayman
 
-# --- Project site settings ---
-# If your site will be at https://<username>.github.io/LearnAndApply/
-# keep baseurl set to the repo name:
-baseurl: "/LearnAndApply"
+url: "https://<your-username>.github.io"   # ← replace with your actual username
+baseurl: "/LearnAndApply"                  # ← must match repo name case exactly
 
-# Optionally set your full site URL (replace <username> below)
-# This helps generate correct absolute links and social previews.
-url: "https://Nabs-knock.github.io"
-
-# --- Markdown engine (Jekyll’s default is kramdown; this line is optional) ---
 markdown: kramdown
-
-# --- Optional: add future tweaks without breaking Cayman ---
-# Put custom <head> snippets (e.g., favicon, Open Graph tags) in: _includes/head-custom.html
-# And small CSS overrides in: assets/css/custom.css
-# Jekyll will automatically pick up these if present.
-``
-
